deployments/kubernetes/inference_hpa_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demand-forecaster-ingress
  namespace: snapp-ml
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx # Assuming NGINX Ingress Controller
  rules:
  - host: api.snapptech.ai
    http:
      paths:
      - path: /forecast
        pathType: Prefix
        backend:
          service:
            name: snapp-demand-forecaster-api-service # Refers to the existing service
            port:
              number: 80
  tls: # Optional: Enable TLS for secure communication
  - hosts:
    - api.snapptech.ai
    secretName: snapptech-tls-secret # Kubernetes secret containing TLS certificate and key
